<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="group_id">群ID</string>
    <string name="group_name">群聊名称</string>
    <string name="group_icon">修改群头像</string>
    <string name="group_notice">群公告</string>
    <string name="group_members">群成员</string>
    <string name="group_type">群类型</string>
    <string name="add_group_member">添加成员</string>
    <string name="remove_group_member">移除成员</string>
    <string name="join_group_type">加群方式</string>
    <string name="in_group_nick_name">我的群昵称</string>
    <string name="dissolve">解散该群</string>
    <string name="modify_group_notice">修改群公告</string>
    <string name="modify_nick_name_in_goup">修改我的群昵称</string>

    <string name="group_detail">群聊详情</string>

    <string name="group_apply_members">群申请</string>

    <string name="group_remove_member">移出群聊</string>
    <string name="modify_group_name_success">修改群名称成功</string>
    <string name="modify_group_notice_success">修改群公告成功</string>
    <string name="exit_group">退出群聊</string>
    <string name="modify_nickname_success">修改昵称成功</string>

    <string name="search_call_hint">输入群成员名称</string>

    <string name="modify_icon_fail">修改群头像失败</string>
    <string name="modify_icon_suc">修改群头像成功</string>
    <string name="chat_room">聊天室</string>
    <string name="chat_room_tip">加入聊天室为自动审批，暂不支持修改</string>
    <string name="dismiss_group_tip">您确认解散该群?</string>
    <string name="quit_group_tip">您确认退出该群？</string>
    <string name="private_group">讨论组</string>
    <string name="public_group">公开群</string>
    <string name="request_wait">邀请成功，等待对方接受</string>
    <string name="remove">移除</string>
    <string name="remove_member">移除成员</string>
    <string name="remove_tip_suc">删除成员成功</string>
    <string name="remove_tip_fail">删除成员失败: </string>
    <string name="invite_suc">邀请成员成功</string>
    <string name="invite_fail">邀请成员失败:</string>
    <string name="remove_fail_tip">移除成员失败</string>
    <string name="manager">管理</string>

    <string name="forbid_join">禁止加群</string>
    <string name="manager_judge">管理员审批</string>
    <string name="auto_judge">自动审批...</string>

    <string name="modify_group_name">修改群名称</string>
    <string name="group_join_type">加群方式</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="accepted">已同意</string>
    <string name="refused">已拒绝</string>

    <string name="input_tip">没有输入昵称，请重新填写</string>

    <string name="chat_to_top">置顶聊天</string>
    <string name="profile_msgrev_opt">消息免打扰</string>

    <string name="join_group_tip">您已被邀请进群: </string>
    <string name="joined_tip">您已加入群: </string>
    <string name="reject_join_tip">您被拒绝加入群: </string>
    <string name="kick_group">您已被踢出群: </string>
    <string name="dismiss_tip_before">您所在的群</string>
    <string name="dismiss_tip_after">已解散</string>
    <string name="get_system_notice">收到自定义系统通知: </string>
</resources>