<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tencent.qcloud.tuicore.component.TitleBarLayout
        android:id="@+id/group_info_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_title_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="@dimen/DIMEN_10DP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/group_member_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:name="@string/group_members" />

            <com.tencent.qcloud.tuikit.tuigroup.component.GridViewInScrollView
                android:id="@+id/group_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:paddingStart="@dimen/DIMEN_14DP"
                android:paddingEnd="@dimen/DIMEN_14DP"
                android:paddingTop="@dimen/DIMEN_5DP"
                android:paddingBottom="@dimen/DIMEN_10DP"
                android:numColumns="6" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/group_type_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:name="@string/group_type" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/group_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                android:visibility="gone"
                app:name="@string/group_id" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                app:name="@string/group_name" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/group_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                android:visibility="gone"
                app:name="@string/group_icon" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/group_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                app:name="@string/group_notice" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/join_type_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                app:name="@string/join_group_type" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/self_nickname_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                app:name="@string/in_group_nick_name" />

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/chat_to_top_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                app:name="@string/chat_to_top"
                app:isSwitch="true"/>

            <com.tencent.qcloud.tuicore.component.LineControllerView
                android:id="@+id/msg_rev_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:name="@string/profile_msgrev_opt"
                app:isSwitch="true"/>

            <Button
                android:id="@+id/group_dissolve_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_42DP"
                android:layout_marginBottom="@dimen/DIMEN_20DP"
                android:layout_marginTop="@dimen/DIMEN_20DP"
                android:background="#ffffff"
                android:textColor="#fb6155" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>

